creat-header-footer

--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -10,3 +10,6 @@
 .section--product-view {
   background: url(../../assets/images/movie-details-bg.jpg) fixed repeat;
 }
+.home-page{
+  background: url(../../assets/images/movie-details-bg.jpg) fixed repeat;
+}
