--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -6,6 +6,7 @@
     display: flex;
     justify-content: flex-start;
     padding: 1rem;
+    padding-bottom: 2rem;
     border-bottom: 2px solid #343434;
 }
 .footer ul {
@@ -41,7 +42,7 @@ width: 25%;
     padding: 0.75rem 0rem;
 }
 .footer_copyright{
-    padding: 1rem 0rem;
+    padding: 2rem 0rem;
     font-size: 0.8rem;
     font-weight: 600;
 }
