--- a/src/pages/Home/component/Banner/style.css
+++ b/src/pages/Home/component/Banner/style.css
@@ -10,6 +10,7 @@ font-size: 3rem;
 .banner .slick-next{
     right: 3.5rem;
 }
-.banner .slick-slider , .banner .slick-list{
+.banner .slick-slider , .banner .slick-list , .banner .slick-slide > div{
     margin: 0;
 }
+ 
