--- a/src/components/ListPromotion/style.css
+++ b/src/components/ListPromotion/style.css
@@ -4,26 +4,26 @@
   padding: 22px 0;
 }
 
-.nav--titles {
+.nav--titles-promotion {
   display: flex;
   justify-content: center;
 }
 
-.nav--titles > li {
+.nav--titles-promotion > li {
   text-transform: uppercase;
   margin: 0 10px;
   font-size: 20px;
   font-weight: 300;
 }
 
-.nav--titles > li > a {
+.nav--titles-promotion > li > a {
   text-decoration: none;
-  color: #ffffff;
-
-  margin: 20px 12px 15px;
+  font-weight: 800;
+  color: #bcdc95;
 }
 
-.nav--titles > li > a:hover {
-  color: #d4dd29;
-  border-bottom: 1px solid #d4dd29;
+.nav--titles-promotion > li > span {
+  text-decoration: none;
+  font-weight: 800;
+  color: #bcdc95;
 }
