finish footer, add backToTop, and update hover img to zoom

--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -10,6 +10,11 @@
 .section--product-view {
   background: url(../../assets/images/movie-details-bg.jpg) fixed repeat;
 }
-.home-page{
+.home-page {
   background: url(../../assets/images/movie-details-bg.jpg) fixed repeat;
+}
+
+.section--promotion {
+  background: url(../../assets/images/bg-home-02.jpg) repeat-x;
+  background-size: 100% 100%;
 }
