--- a/src/components/PreSaleTickets/style.css
+++ b/src/components/PreSaleTickets/style.css
@@ -20,6 +20,11 @@
   height: 100%;
   width: 100%;
   object-fit: cover;
+  transition: 0.3s;
+}
+
+.card-top img:hover {
+  transform: scale(1.3);
 }
 
 .slick-arrow {
