--- a/src/components/PreSaleTickets/style.css
+++ b/src/components/PreSaleTickets/style.css
@@ -24,7 +24,7 @@
 }
 
 .card-top img:hover {
-  transform: scale(1.3);
+  transform: scale(1.1);
 }
 
 .slick-arrow {
@@ -32,6 +32,7 @@
 }
 
 .title-movie {
+  padding: 1rem 0;
   text-align: center;
   font-weight: bold;
   color: white;
