--- a/src/pages/ShowTimes/style.css
+++ b/src/pages/ShowTimes/style.css
@@ -1,3 +1,179 @@
-.show_times{
-    height: 100vh;
+li {
+  list-style: none;
+  display: list-item;
+}
+
+.showtimes {
+  position: relative;
+  background: url(../../assets/images/movie-details-bg.jpg);
+  color: #fff;
+  background-position: top;
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  margin-top: 0;
+  padding-top: 35px;
+}
+
+.showtimes .lich-chieu-theo-phim {
+  position: relative;
+  z-index: 20;
+}
+
+.lich-chieu-theo-phim:before {
+  display: table;
+  content: " ";
+}
+
+.lich-chieu-theo-phim:after {
+  clear: both;
+  display: table;
+  content: " ";
+}
+
+.lich-chieu-theo-phim {
+  max-width: 1170px;
+}
+
+.lich-chieu-theo-phim ul {
+  margin-bottom: 20px;
+}
+
+.lich-chieu-theo-phim {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.showtimes:before {
+  top: 0;
+  background: url(../../assets/images/bg-cinema-top.png);
+}
+
+.showtimes:after {
+  content: "";
+  bottom: 0;
+  left: 0;
+  height: 350px;
+  position: absolute;
+  width: 100%;
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0) 0% rgba(0, 0, 0, 1) 100%
+  );
+  top: auto;
+}
+
+.section--product-view {
+  padding-bottom: 50px;
+}
+
+.section--product-view:before {
+  content: "";
+  background: url(../../assets/images/movie-details-bg.jpg);
+  background-position: top;
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 39px;
+  left: 0;
+  width: 100%;
+  height: calc(100% - 39px);
+}
+
+.section--product-view {
+  padding: 70px 0 90px;
+  font-family: "proxima_nova";
+  line-height: 29px;
+  text-align: center;
+  font-size: 24px;
+  font-weight: 700;
+  z-index: 20;
+}
+
+.section--product-view .product--title {
+  padding-bottom: 22px;
+}
+
+.section--product-view .product--title h3 {
+  display: inline-block;
+  margin-bottom: 15px;
+  font-size: 20px;
+  border-bottom: 1px solid transparent;
+  font-weight: 300;
+  transition: all 0.4s ease;
+  margin-left: 12px;
+  margin-right: 12px;
+  cursor: pointer !important;
+  line-height: 28px;
+}
+
+.section--product-view .product--title h3:hover {
+  color: #d4dd29;
+  border-color: #d4dd29;
+  border-bottom: 1px solid;
+}
+
+.product--title {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.product--title h3 {
+  font-weight: 200;
+}
+
+.slick-dots {
+  background: none;
+}
+
+.button__bar {
+  display: flex !important;
+  justify-content: center;
+  vertical-align: middle;
+  margin: auto;
+  padding: 0;
+  border-radius: 40px;
+  width: 70px;
+  text-align: center;
+}
+
+.button__bar li {
+  list-style: none;
+  cursor: pointer;
+  display: inline-block;
+  margin: 0 3px;
+  padding: 0;
+}
+
+.button__bar li button {
+  border: none;
+  background: #d7d7d7;
+  color: transparent;
+  cursor: pointer;
+  display: block;
+  height: 12px;
+  width: 12px;
+  border-radius: 7.5px;
+}
+
+.button__bar li.slick-active button {
+  background-color: #45ab3c;
+}
+
+.button__bar li button:hover,
+.button__bar li button:focus {
+  background: #45ab3c;
+  outline: 0;
+}
+
+.border-bottom {
+  max-width: 970px;
+  width: 100%;
+  background: #42af33;
+  height: 2px;
+  margin: 0 auto;
 }
