--- a/src/components/PreSaleTickets/style.css
+++ b/src/components/PreSaleTickets/style.css
@@ -37,3 +37,27 @@
   font-weight: bold;
   color: white;
 }
+
+.btn-antd {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+  font-size: 15px;
+  line-height: 45px;
+  font-weight: 700;
+  transition: 0.4s ease all;
+  text-decoration: none;
+}
+
+.btn-antd:hover {
+  color: #45ab3c;
+  background: url(../../assets/images/bg-btn-green-hover.jpg) repeat;
+}
+
+.btn-antd svg {
+  margin-right: 8px;
+}
+
+.btn-antd span {
+}
