--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -18,3 +18,7 @@
   background: url(../../assets/images/bg-home-02.jpg) repeat-x;
   background-size: 100% 100%;
 }
+
+.background-white {
+  background-color: #fff;
+}
