--- a/src/components/ListMovie/style.css
+++ b/src/components/ListMovie/style.css
@@ -28,8 +28,9 @@
 
 .nav--titles h3 {
   text-decoration: none;
-  margin: 20px 12px 15px;
+  margin: 20px 6px 15px;
   font-weight: 600;
+  cursor: pointer;
   transition: 0.4s ease all;
   -moz-transition: 0.4s ease all;
   -o-transition: 0.4s ease all;
