--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,13 @@
   background-color: black;
   color: #fff;
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
