--- a/src/components/ListMovie/style.css
+++ b/src/components/ListMovie/style.css
@@ -1,7 +1,9 @@
 .list-movie{
   height: 100%;
   padding: 1rem 0;
-  padding-top: 2rem;
+}
+.list-movie nav {
+  margin-bottom: 1rem;
 }
 .list-movie > nav > ul {
   margin: 0;
@@ -17,7 +19,7 @@
 .nav--titles > li {
   text-transform: uppercase;
   margin: 0 10px;
-  font-size: 20px;
+  font-size: 1.5rem;
   font-weight: 300;
 }
 
@@ -36,4 +38,44 @@
 .nav--titles > li > a.active-link{
   color: #d4dd29;
   border-bottom: 1px solid #d4dd29;
+}
+.list-movie .card{
+display: flex !important;
+flex-direction: column;
+height: 70vh
+
+}
+
+.list-movie .card .card-top{
+  height: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.list-movie .card .card-bottom{
+  height: 20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  }
+
+
+.list-movie .card .card-top img{
+  height: 100%
+}
+
+.list-movie .card .card-top .title-movie{
+  height: 20%;
+  padding-top: 1.5rem;
+}
+
+.list-movie button span{
+  text-transform: uppercase;
+  padding: 0 0.25rem;
+  font-weight: 600;
+}
+.list-movie .slick-prev , .list-movie .slick-next{
+visibility: hidden;
 }
