--- a/src/pages/Cinema/style.css
+++ b/src/pages/Cinema/style.css
@@ -63,3 +63,17 @@
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-column-gap: 40px;
 }
+
+li.left::marker {
+  unicode-bidi: isolate;
+  font-variant-numeric: tabular-nums;
+  text-transform: none;
+  text-indent: 0px !important;
+  text-align: start !important;
+  text-align-last: start !important;
+}
+
+.page-wrapper {
+  background: #e8e8e8;
+  padding: 21px 0 127px;
+}
