--- a/src/pages/PromotionsEvents/style.css
+++ b/src/pages/PromotionsEvents/style.css
@@ -16,6 +16,7 @@
 .title--promotion ul {
   display: flex;
   justify-content: center;
+  align-items: center;
   padding-bottom: 30px;
 }
 .title--promotion ul li {
