--- a/src/App.css
+++ b/src/App.css
@@ -13,12 +13,12 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 button.btn--fb-share{
-  background: #3b5998 !important; 
+  background: #3b5998 ; 
   min-width: 5rem;
   min-height: 2rem;
   border: none ;
   border-radius: 0.25rem;
-  color: #fff !important;
+  color: #fff ;
   display: flex;
   place-items: center;
   justify-content: space-evenly;
