--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -100,3 +100,19 @@
   border: 1px solid #d4dd29;
   border-radius: 50%;
 }
+@media only screen and (max-width: 576px) {
+  .footer .container{
+    flex-direction: column;
+  }
+  .footer .footer_row-left, .footer .footer_row-right {
+    width: 100%;
+}
+.footer_row-left{
+  border-bottom: 1px solid #fff;
+    padding-bottom: 0.75rem;
+}
+#toTop{
+  bottom: 0.75rem;
+    right: 1rem;
+}
+}
