--- a/src/pages/Home/component/Banner/style.css
+++ b/src/pages/Home/component/Banner/style.css
@@ -13,4 +13,8 @@ font-size: 3rem;
 .banner .slick-slider , .banner .slick-list , .banner .slick-slide > div , .banner .slick-track{
     margin: 0;
 }
- 
+@media only screen and (max-width: 576px) {
+    button.slick-prev, button.slick-next {
+        visibility: hidden;
+    }
+  }
