--- a/src/pages/Movie/style.css
+++ b/src/pages/Movie/style.css
@@ -54,3 +54,27 @@
 .movie-detail-content--right {
   width: 50%;
 }
+@media only screen and (max-width: 576px) {
+  .movie .container-movie {
+    padding: 0;
+    padding-bottom: 5rem;
+  }
+  .movie-detail-title {
+    padding: 1rem 2rem ;
+}
+.movie-detail-content{
+  flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-left: 0.75rem;
+}
+.movie-detail-content--left ,.movie-detail-content--right{
+  width: 100%
+}
+.movie p {
+  width: 90%;
+}
+.movie p span.classify {
+  font-size: 1rem;}
+  
+}
