--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -164,7 +164,7 @@ button.header_button--toggle {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding: 1rem 2rem ;
+  padding: 1rem 2rem;
 }
 .from-login input {
   width: 20rem;
@@ -183,8 +183,8 @@ button.header_button--toggle {
 }
 .form-button-sigup {
   margin: 1rem 0;
-    font-size: 0.9rem;
-    min-width: 83%;
+  font-size: 0.9rem;
+  min-width: 83%;
 }
 .form-button-sigup:hover {
   background-color: #8ac441;
@@ -212,17 +212,19 @@ button.header_button--toggle {
   margin-left: 1rem;
 }
 a.login-name,
-a.log-out ,a.admin-login {
+a.log-out,
+a.admin-login ,a.collab-login{
   text-decoration: none;
 }
 a.login-name {
   color: #89c441;
 }
-a.admin-login{
+a.admin-login {
   color: #ff0000;
 }
-a.admin-login:hover{
-  color: #fff;
+
+a.collab-login {
+  color: #ED5321;
 }
 a.log-out {
   color: #fff;
@@ -244,14 +246,16 @@ a.log-out {
   color: #89c441;
 }
 @media only screen and (max-width: 576px) {
-  .header_button_order-ticket,.header_logo ,.header_social_login{
+  .header_button_order-ticket,
+  .header_logo,
+  .header_social_login {
     display: none;
   }
-  .modal-header-login{
+  .modal-header-login {
     right: -1.5rem;
     z-index: 4;
   }
-  .image--line img{
+  .image--line img {
     max-width: 100vw;
   }
 }
