--- a/src/pages/Account/components/InfomationTop/style.css
+++ b/src/pages/Account/components/InfomationTop/style.css
@@ -1,4 +1,3 @@
-
 .info-top-title {
   max-width: 80%;
 }
@@ -47,34 +46,52 @@ img.info-avatar {
 .title-info-upload {
   max-width: 50%;
 }
-.title-info-upload p,.title-info-upload span {
+.title-info-upload p,
+.title-info-upload span {
   color: #fff;
   font-weight: 600;
 }
-.title-info-upload span{
-    padding-left: 0.5rem;
+.title-info-upload span {
+  padding-left: 0.5rem;
 }
-.title-info-upload h3{
-    padding-top: 2rem;
-  color:#42b033 ;
-  
+.title-info-upload h3 {
+  padding-top: 2rem;
+  color: #42b033;
 }
 .info-top-title strong {
   color: #42b033;
   text-transform: capitalize;
 }
+.title-info-upload .meta {
+  display: flex;
+  justify-content: space-between;
+}
+.title-info-upload .meta p {
+  color: #7c7c7b;
+}
+.title-info-upload .meta strong {
+  color: #e5cf04;
+}
+.title-info-upload .meta sup {
+  position: relative;
+  bottom: 0.25rem;
+  font-size: 0.8rem;
+}
+.title-info-upload .meta .cost{
+  padding-right: 2rem;
+}
 @media only screen and (max-width: 576px) {
   .info-top {
-   flex-direction: column;
+    flex-direction: column;
   }
   .title-info-upload {
     max-width: 100%;
     padding-left: 1rem;
-}
-.image-container{
-  margin-left: 1rem;
-}
-img.info-avatar{
-  min-height: 10rem;
-}
+  }
+  .image-container {
+    margin-left: 1rem;
+  }
+  img.info-avatar {
+    min-height: 10rem;
+  }
 }
