--- a/src/pages/Movie/style.css
+++ b/src/pages/Movie/style.css
@@ -160,4 +160,7 @@ min-height: 2rem;
   .movie p span.classify {
     font-size: 1rem;
   }
+  .total-order-ticket p{
+    font-size: 1.2rem;
+  }
 }
